# rust_wasm_starter

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  setup.sh  webpack.config.js
js_src/: main.js
rust_src/: lib.rs
static/: index.html
