[package]
name = "rust-wasm-starter"
version = "0.1.0"
authors = ["craig fay <craigfay1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib"]
path = "./rust_src/lib.rs"
